--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/second"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0B111F">
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/result"
         android:layout_width="129dp"
-        android:layout_height="37dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
